Prevent background from overflowing

--- a/styles/meta.css
+++ b/styles/meta.css
@@ -113,7 +113,9 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  width: 100vw;
   height: 100vh;
+  position: relative;
   overflow: hidden;
 }
 
